--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -462,21 +462,21 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="text-center">
-            <form action="submit" method="post">
+            <form hx-post="/submit" hx-target="this" hx-swap="outerHTML">
               <div class="form-row">
                 <div class="form-group col-sm-6">
                   <input name="name" type="text" class="form-control bg-secondary border-0 py-4 px-3"
-                    placeholder="Your Name" />
+                    placeholder="Your Name" required="required" />
                 </div>
                 <div class="form-group col-sm-6">
                   <input name="email" type="email" class="form-control bg-secondary border-0 py-4 px-3"
-                    placeholder="Your Email" />
+                    placeholder="Your Email" required="required" />
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-sm-6">
                   <select name="numberOfGuests" class="form-control bg-secondary border-0" style="height: 52px;">
-                    <option>Number of Guest</option>
+                    <option>Number of Guests</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -485,15 +485,14 @@
                 </div>
                 <div class="form-group col-sm-6">
                   <select name="isAttending" class="form-control bg-secondary border-0" style="height: 52px;">
-                    <option>I'm Attending</option>
-                    <option>All Events</option>
-                    <option>Wedding Party</option>
+                    <option>Attending</option>
+                    <option>Unable To Attend</option>
                   </select>
                 </div>
               </div>
               <div class="form-group">
-                <textarea name="message" class="form-control bg-secondary border-0 py-2 px-3" rows="5"
-                  placeholder="Message" required="required"></textarea>
+                <textarea name="dietary" class="form-control bg-secondary border-0 py-2 px-3" rows="5"
+                  placeholder="Dietary Requirements"></textarea>
               </div>
               <div>
                 <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit">Submit</button>
@@ -508,7 +507,7 @@
 
 
   <!-- Footer Start -->
-  <div class="container-fluid bg-dark text-white py-5" id="contact" style="margin-top: 90px;">
+  <div class="container-fluid bg-dark text-white py-5" id="contact">
     <div class="container text-center py-5">
       <div class="section-title position-relative text-center">
         <h1 class="font-secondary display-3" style="color: var(--section-border-color);">Thank You</h1>
@@ -548,9 +547,31 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/imagesloaded@5.0.0/imagesloaded.pkgd.min.js"
     integrity="sha256-htrLFfZJ6v5udOG+3kNLINIKh2gvoKqwEhHYfTTMICc=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.12/dist/htmx.min.js"
+    integrity="sha256-RJMXreeIHpSVENthSZHhlcOgmcTHkcJNrOxV+fSipFI=" crossorigin="anonymous"></script>
 
   <!-- Template Javascript -->
   <script src="js/main.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var elements = document.getElementsByTagName("INPUT");
+      for (var i = 0; i < elements.length; i++) {
+        elements[i].oninvalid = function(e) {
+          e.target.setCustomValidity("");
+          if (!e.target.validity.valid) {
+            if (e.target.name === "name") {
+              e.target.setCustomValidity("You need to fill this in. Otherwise we'll assume your a Megan.");
+            } else if (e.target.name === "email") {
+              e.target.setCustomValidity("How will we contact you?");
+            }
+          }
+        };
+        elements[i].oninput = function(e) {
+          e.target.setCustomValidity("");
+        };
+      }
+    })
+  </script>
 </body>
 
 </html>
