feat: add accommodation details

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -314,16 +314,33 @@
       </div>
 
       <!-- Venue Image and Details -->
-      <div class="row">
+      <div class="row mb-5">
         <div class="col-md-12 text-center">
           <img class="img-fluid mb-4" src="img/event-1.jpg" alt="Wasing Park">
           <h4 class="mb-3">Wasing Park</h4>
           <p class="mb-2">Wasing Park, Wasing Ln, RG7 4NG</p>
           <p class="mb-2"><a href="https://what3words.com/diamonds.hang.galloped"
               target="_blank">///diamonds.hang.galloped</a></p>
-          <p class="mb-0">12:00AM - Late</p>
+          <p class="mb-0">Tuesday 27th May 2025</p>
+          <p class="mb-0">12:00PM - Late</p>
           <br />
           <p class="mb-0">Parking Available on site</p>
+        </div>
+      </div>
+
+      <!-- On the Day Section -->
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-12 text-center">
+          <h2 class="font-secondary display-5 mb-4">Accommodation</h2>
+          <!-- <h5 class="font-weight-normal text-muted mb-4">Below are some important details about the wedding day:</h5> -->
+          <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+              <ul class="list-unstyled">
+                <li class="mb-3">Accommodation is available at the venue and can be booked through this link <a
+                    href="https://example.com" target="_blank">here</a>.</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
 
