--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -72,7 +72,7 @@
     <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-          <img class="position-absolute w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;">
+          <img class="position-absolute w-100 h-100" src="img/carousel-1.png" style="object-fit: cover; opacity: 0.8;">
           <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
             <div class="p-3" style="max-width: 900px;">
               <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Jack & Eleanor</h1>
@@ -83,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+        <!-- <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
           <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
           <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
             <div class="p-3" style="max-width: 900px;">
@@ -94,9 +94,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-      <a class="carousel-control-prev justify-content-start" href="#header-carousel" data-slide="prev">
+      <!-- <a class="carousel-control-prev justify-content-start" href="#header-carousel" data-slide="prev">
         <div class="btn btn-primary px-0" style="width: 68px; height: 68px;">
           <span class="carousel-control-prev-icon mt-3"></span>
         </div>
@@ -105,7 +105,7 @@
         <div class="btn btn-primary px-0" style="width: 68px; height: 68px;">
           <span class="carousel-control-next-icon mt-3"></span>
         </div>
-      </a>
+      </a> -->
     </div>
   </div>
   <!-- Carousel End -->
