fix: update story and formatting

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -164,7 +164,9 @@
               <h4 class="mb-2">First Met</h4>
               <p class="text-uppercase mb-2">31<span style="text-transform: lowercase !important">st</span> March 2017
               </p>
-              <p class="m-0"></p>
+              <p class="m-0">It was during the Easter holidays of our second year at university when fate brought us
+                together at Q Club in Reading. The night was electric, the music pulsing, and that’s when Jack, with his
+                irresistible dance moves, caught Eleanor's eye. One drink later, and the spark between them ignited.</p>
             </div>
           </div>
         </div>
@@ -174,7 +176,8 @@
               <h4 class="mb-2">First Date</h4>
               <p class="text-uppercase mb-2">17<span style="text-transform: lowercase !important">th</span> April 2017
               </p>
-              <p class="m-0"></p>
+              <p class="m-0">Two weeks later and Jack took Eleanor to the steak house chain, Cau, in Reading. We have
+                been back there even after is changed hands and highly recommend it!</p>
             </div>
           </div>
           <div class="col-md-6 text-center text-md-left">
@@ -190,9 +193,9 @@
               <h4 class="mb-2">Nine Months Long Distance</h4>
               <p class="text-uppercase mb-2">1<span style="text-transform: lowercase !important">st</span> September
                 2018</p>
-              <p class="m-0">Lorem elitr magna stet rebum dolores sed. Est stet labore est lorem lorem at amet sea, eos
-                tempor rebum, labore amet ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd stet amet est dolor
-                elitr.</p>
+              <p class="m-0">Eleanor took off on her big adventure, and halfway through, Jack swooped in for two weeks
+                of travel in Thailand and Singapore. Then, just when she thought home was calling Jack showed up in
+                Australia to bring her home, completing her expedition by exploring the East Coast together.</p>
             </div>
           </div>
         </div>
@@ -202,9 +205,9 @@
               <h4 class="mb-2">Moved in Together</h4>
               <p class="text-uppercase mb-2">17<span style="text-transform: lowercase !important">th</span> July 2019
               </p>
-              <p class="m-0">Lorem elitr magna stet rebum dolores sed. Est stet labore est lorem lorem at amet sea, eos
-                tempor rebum, labore amet ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd stet amet est dolor
-                elitr.</p>
+              <p class="m-0">From only chatting on the phone for months to diving straight into living together, we
+                rented a top-floor flat in Reading. It was the perfect place for our first home together even with the
+                copious number of stairs to get there and the pantry no where near the kitchen!</p>
             </div>
           </div>
           <div class="col-md-6 text-center text-md-left">
@@ -220,9 +223,12 @@
               <h4 class="mb-2">Engagement</h4>
               <p class="text-uppercase mb-2">22<span style="text-transform: lowercase !important">nd</span> May
                 2023</p>
-              <p class="m-0">Lorem elitr magna stet rebum dolores sed. Est stet labore est lorem lorem at amet sea, eos
-                tempor rebum, labore amet ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd stet amet est dolor
-                elitr.</p>
+              <p class="m-0">7 years to the day that we became officially a couple, on the outskirts of Sofia, Bulgaria,
+                Jack secretly chose a romantic spot with pretty views. Sadly there were other people at the spot when
+                they first arrived so Jack dragged out lunch as long as he could. When the people left, he got up, got
+                too excited to ask the question so forgot to say his prepared speech and quickly got to the point! Newly
+                engaged, nothing could dampen our spirits as we cycled back to the hotel in the rain to spend the
+                evening in the hotel spa following a very posh meal out.</p>
             </div>
           </div>
         </div>
@@ -292,11 +298,10 @@
       </div>
 
       <!-- On the Day Section -->
-      <div class="row justify-content-center mb-5">
+      <div class="row justify-content-center">
         <div class="col-md-12 text-center">
           <h2 class="font-secondary display-5 mb-4">On the Day</h2>
           <!-- <h5 class="font-weight-normal text-muted mb-4">Below are some important details about the wedding day:</h5> -->
-
           <div class="row justify-content-center">
             <div class="col-md-6 text-center">
               <ul class="list-unstyled">
