fix: minor changes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -223,11 +223,13 @@
               <h4 class="mb-2">Engagement</h4>
               <p class="text-uppercase mb-2">22<span style="text-transform: lowercase !important">nd</span> May
                 2023</p>
-              <p class="m-0">7 years to the day that we became officially a couple, on the outskirts of Sofia, Bulgaria,
+              <p class="m-0">Seven years to the day that we became officially a couple, on the outskirts of Sofia,
+                Bulgaria,
                 Jack secretly chose a romantic spot with pretty views. Sadly there were other people at the spot when
                 they first arrived so Jack dragged out lunch as long as he could. When the people left, he got up, got
                 too excited to ask the question so forgot to say his prepared speech and quickly got to the point! Newly
-                engaged, nothing could dampen our spirits as we cycled back to the hotel in the rain to spend the
+                engaged, nothing could dampen our spirits as we cycled back to the hotel in the pouring rain to spend
+                the
                 evening in the hotel spa following a very posh meal out.</p>
             </div>
           </div>
@@ -288,7 +290,7 @@
 
 
   <!-- Event Start -->
-  <div class="container-fluid py-5" id="event">
+  <div class="container-fluid" id="event">
     <div class="container py-5">
       <!-- Section Title -->
       <div class="section-title position-relative text-center">
@@ -298,48 +300,46 @@
       </div>
 
       <!-- On the Day Section -->
-      <div class="row justify-content-center">
-        <div class="col-md-12 text-center">
-          <h2 class="font-secondary display-5 mb-4">On the Day</h2>
+      <div class="row justify-content-center mb-4">
+        <div class="col-md-6 text-center">
+          <h4 class="display-5 mb-4">On the Day</h4>
           <!-- <h5 class="font-weight-normal text-muted mb-4">Below are some important details about the wedding day:</h5> -->
           <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
+            <div class="col-md-12 text-center">
               <ul class="list-unstyled">
                 <li class="mb-3"><strong>Dress code:</strong> Cocktail dress code.</li>
-                <li class="mb-3"><strong>Outdoor Ceremony:</strong> Ladies, if the weather is on our side, the ceremony
+                <li class="mb-3"><strong>Outdoor Ceremony:</strong> If the weather is on our side, the
+                  ceremony
                   and drinks reception will be held on grass.</li>
                 <li class="mb-3"><strong>Unplugged Ceremony:</strong> Please no phones during the ceremony - let the
                   pros do their job! We'll be sharing the photos and videos afterwards.</li>
                 <li class="mb-3"><strong>Plan of the Day:</strong> Detailed schedule will be provided closer to the
                   date.</li>
+                <li class="mb-3"><strong>Parking:</strong> Parking is available at the venue.</li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Venue Image and Details -->
-      <div class="row mb-5">
-        <div class="col-md-12 text-center">
+        <!-- Venue Image and Details -->
+        <div class="col-md-6 text-center">
           <img class="img-fluid mb-4" src="img/event-1.jpg" alt="Wasing Park">
-          <h4 class="mb-3">Wasing Park</h4>
+          <h5 class="mb-3">Wasing Park</h5>
           <p class="mb-2">Wasing Park, Wasing Ln, RG7 4NG</p>
           <p class="mb-2"><a href="https://what3words.com/diamonds.hang.galloped"
               target="_blank">///diamonds.hang.galloped</a></p>
-          <p class="mb-0">Tuesday 27th May 2025</p>
-          <p class="mb-0">12:00PM - Late</p>
-          <br />
-          <p class="mb-0">Parking Available on site</p>
+          <p class="mb-0"><strong>Tuesday 27th May 2025</strong></p>
+          <p class="mb-0"><strong>12:00PM - Late</strong></p>
         </div>
       </div>
 
       <!-- On the Day Section -->
       <div class="row justify-content-center mb-5">
         <div class="col-md-12 text-center">
-          <h2 class="font-secondary display-5 mb-4">Accommodation</h2>
+          <h4 class="display-5 mb-4">Accommodation</h4>
           <!-- <h5 class="font-weight-normal text-muted mb-4">Below are some important details about the wedding day:</h5> -->
           <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
+            <div class="col-md-12 text-center">
               <ul class="list-unstyled">
                 <li class="mb-3">Accommodation is available at the venue and can be booked through this link <a
                     href="https://example.com" target="_blank">here</a>.</li>
@@ -352,17 +352,16 @@
       <!-- Next Day Section -->
       <div class="row justify-content-center mt-5">
         <div class="col-md-12 text-center">
-          <h2 class="font-secondary display-5 mb-4">Next Day</h2>
-          <h5 class="font-weight-normal text-muted mb-4">We look forward to spending more time with you!</h5>
-
+          <h4 class="display-5 mb-4">Next Day</h4>
+          <p class="display-5 font-weight-normal text-muted mb-4">We look forward to spending more time with you!</p>
           <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
+            <div class="col-md-12 text-center">
               <ul class="list-unstyled">
-                <li class="mb-3"><strong>Breakfast:</strong> For those staying at the venue, breakfast will be served at
-                  9:00 AM.</li>
+                <li class="mb-3"><strong>Checkout:</strong> For those staying at the venue, checkout is at 10:00 AM
+                  after having had breakfast.</li>
                 <li class="mb-3"><strong>Morning Walk:</strong> Join us for a walk. Meeting at 10:30 AM at the
                   Silchester
-                  Roman ruins.</li>
+                  Roman Ruins, RG7 2HP.</li>
                 <li class="mb-3"><strong>Meet at the Pub:</strong> After the walk, we can have a tipple at the local
                   pub. The Red Lion, RG7 2HU.</li>
               </ul>
@@ -489,7 +488,7 @@
                 <div class="form-group col-sm-6">
                   <input name="name" type="text" class="form-control bg-secondary border-0 py-4 px-3"
                     placeholder="Your Name" onkeyup="this.setCustomValidity('')" hx-on:htmx:validation:validate="if (this.value == '') { 
-                      this.setCustomValidity('You need to fill this in. Otherwise we\'ll assume your a Megan.'); 
+                      this.setCustomValidity('You need to fill this in. Otherwise we\'ll assume you're a Megan.'); 
                       htmx.find('#form-rsvp').reportValidity(); 
                     }" />
                 </div>
