fix: misc fixes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -33,6 +33,8 @@
   <link href="fonts/BlackerSansText-Bold.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
 
   <!-- <meta http-equiv="refresh" content="10"> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51" style="font-family:'Arimo', sans-serif;">
@@ -555,14 +557,14 @@
 
 
   <!-- Footer Start -->
-  <div class="container-fluid bg-dark text-white py-5" id="contact">
+  <footer class="container-fluid bg-dark text-white py-5" id="contact">
     <div class="container text-center py-5">
       <div class="section-title position-relative text-center">
         <h1 class="font-secondary display-3" style="color: var(--section-border-color);">Thank You</h1>
         <i class="far fa-heart" style="color: var(--accent-color);"></i>
       </div>
     </div>
-  </div>
+  </footer>
   <!-- Footer End -->
 
 
